--- a/data/rules.css
+++ b/data/rules.css
@@ -29,11 +29,10 @@ li{list-style:none;}
 
 /* CSSFontFaceRule */
 @font-face {
-  font-family: 'MyWebFont';
-  src: url('myfont.woff2') format('woff2'),
-       url('myfont.woff') format('woff'),
-       url('myfont.ttf') format('truetype');
+        font-family: "Robson Celtic";
+        src: url("http://site/fonts/rob-celt");
 }
+      
 @font-face {
   font-family: MyHelvetica;
   src: local("Helvetica Neue Bold"),
@@ -44,7 +43,7 @@ li{list-style:none;}
 
 @font-face {
       font-family: "Bitstream Vera Serif Bold";
-      src: url("http://developer.mozilla.org/@api/deki/files/2934/=VeraSeBd.ttf");
+      src: url("http://foo.org/VeraSeBd.ttf");
     }
     
 
